chore(ShikiHighlighter): Fix horizontal scrolling of code snippets

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,45 @@ html {
   scroll-padding-top: var(--header-height);
 }
 
+pre.shiki {
+  @apply overflow-x-auto p-4 text-base;
+
+  code {
+    @apply inline-block w-[fit-content] min-w-full;
+  }
+
+  .diff,
+  .highlighted {
+    @apply relative -ml-4 inline-block w-[calc(100%+2rem)] px-4;
+  }
+
+  .diff.add {
+    @apply !bg-lime-400/20;
+  }
+
+  .diff.add::before {
+    content: '+';
+    @apply absolute left-1 !text-lime-500;
+  }
+
+  .diff.remove {
+    @apply !bg-rose-400/20;
+  }
+
+  .diff.remove::before {
+    content: '-';
+    @apply absolute left-1 !text-rose-500;
+  }
+
+  .highlighted {
+    @apply !bg-slate-700;
+  }
+
+  .highlighted-word {
+    @apply -mx-1 -my-px border border-dotted border-slate-400 !bg-slate-700 px-px;
+  }
+}
+
 @layer base {
   body:not(textarea) {
     @apply font-sans text-slate-700 selection:bg-blue-600 selection:text-yellow-300 dark:text-slate-50;
@@ -229,41 +268,6 @@ html {
 
   .prose-lg .rehype-code-title {
     @apply text-base;
-  }
-
-  pre.shiki {
-    @apply p-4 text-base;
-  }
-
-  pre.shiki .diff,
-  pre.shiki .highlighted {
-    @apply relative -ml-4 inline-block w-[calc(100%+2rem)] px-4;
-  }
-
-  pre.shiki .highlighted-word {
-    @apply -mx-1 -my-px border border-dotted border-slate-500 !bg-slate-950 px-1 py-px;
-  }
-
-  pre.shiki .diff.add {
-    @apply !bg-green-400/15;
-  }
-
-  pre.shiki .diff.add::before {
-    content: '+';
-    @apply absolute left-1 !text-green-400;
-  }
-
-  pre.shiki .diff.remove {
-    @apply !bg-rose-500/15;
-  }
-
-  pre.shiki .diff.remove::before {
-    content: '-';
-    @apply absolute left-1 !text-rose-500;
-  }
-
-  pre.shiki .highlighted {
-    @apply !bg-slate-700;
   }
 }
 
